tests/typing/errors/type_mismatch/test_tptp_infer.expected
File "tests/typing/errors/type_mismatch/test_tptp_infer.p", line 4, character 18-23:
4 | tff(error, axiom, p(12) ).
                      ^^^^^
Error The typechecker inferred the type for the symbol `p` to be `int -> _`.
      That inference lead to infer one of the argument types of that type to
      be `int`.
      However, the language specified that only the following types should be
      allowed there: `$i`
      Symbol `p` is located at line 4, character 18-19
